--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Léa BAR - Accueil</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/main.css'>
-    <script src='./assets/js/main.js'></script>
+    <script type="module" src='./assets/js/main.js'></script>
 </head>
 <body>
-    
+    <canvas id="background"></canvas>
 </body>
 </html>
