--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>Léa BAR - Accueil</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/home/home.css'>
     <script type="module" src='./assets/js/main.js'></script>
 </head>
 <body>
     <canvas id="background"></canvas>
+    <div class="content">
+        <div class="titleContainer">
+            <h1 class="title">Léa BAR</h1>
+            <h2 class="subtitle">Développeuse polyvalente</h2>
+        </div>
+    </div>
 </body>
 </html>
