--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -11,6 +11,9 @@
 </head>
 <body>
     <canvas id="background"></canvas>
+    <navbar class="navbar">
+        <a href="#">Accueil</a>
+    </navbar>
     <div class="content">
         <div class="titleContainer">
             <h1 class="title">Léa BAR</h1>
