feat: list of my projects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <canvas id="background"></canvas>
     <navbar class="navbar">
-        <a href="#">Accueil</a>
+        <a href="#">Accueil</a>²
+        <a href="./projects.html">Projets</a>
+        <a href="./about.html">À propos de moi</a>
+        <a href="./contact.html">Contact</a>
     </navbar>
     <div class="content">
         <div class="titleContainer">
