--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <canvas id="background"></canvas>
     <navbar class="navbar">
-        <a href="#">Accueil</a>²
+        <a href="#">Accueil</a>
         <a href="./projects.html">Projets</a>
         <a href="./about.html">À propos de moi</a>
         <a href="./contact.html">Contact</a>
