--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <div class="about">
             <div class="card">
                 <div class="text">
-                    <p>Je m'appelle Léa BAR, j'ai 20 ans et je suis étudiante en deuxième année de BUT Informatique à l'Université de Lille. J'ai commencé l'informatique dès l'âge de 7 ans avec le web et le C# à travers les jeux vidéo, avant de découvrir le Java grâce à Minecraft.</p>
+                    <p>Je m'appelle Léa BAR, j'ai 20 ans et je suis étudiante en deuxième année de BUT Informatique à l'Université de Lille. J'ai commencé l'informatique dès l'âge de 7 ans avec le web (HTML/CSS/JS/PHP) et le C# à travers les jeux vidéo, avant de découvrir le Java grâce à Minecraft.</p>
                     <p>Je me suis depuis spécialisée dans ce langage que je mets en pratique en tant que développeuse bénévole chez Ekalia. Aujourd'hui, je maîtrise l'administration système Linux, le Java, le TypeScript et le Python.</p>
                     <p>Passionnée par l'informatique, j'aime explorer de nouveaux langages tels que le Rust ou le Go et suivre l'actualité des frameworks notamment dans le domaine du web.</p>
                 </div>
