--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/home/home.css'>
-    <script type="module" src='./assets/js/main.js'></script>
+    <script type="module" src='./assets/js/main.js' defer></script>
 </head>
 <body>
     <canvas id="background"></canvas>
