--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/projects/projects.css'>
-    <script type="module" src='./assets/js/main.js'></script>
-    <script type="module" src='./assets/js/projects/projects.js'></script>
+    <script type="module" src='./assets/js/main.js' defer></script>
+    <script type="module" src='./assets/js/projects/projects.js' defer></script>
 </head>
 <body>
     <canvas id="background"></canvas>
